--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,29 @@ tqdm==4.66.5
 seaborn==0.13.2
 xgboost==2.1.1
 
+ensure==1.0.4 
+python-box==7.2.0
+python-dotenv==1.0.1
+
+
 ## mlops tools
 dvc[all]==3.56.0
 dagshub==0.3.40
 mlflow==2.17.1
 
 ## docs
-mkdocs-material
+mkdocs-material==9.5.42
+
+## logs and alerting
+opentelemetry-distro==0.48b0
+opentelemetry-exporter-otlp==1.27.0
+
+
+## dev 
+### For Dev Environment
+
+pytest==8.3.3
+tox==4.21.0
+mypy==1.11.2
+pytest-cov==5.0.0
+flake8>=5.0.4
