--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+## Models
 scikit-learn
 torch==2.4.0
 torchvision==0.19.0
+xgboost==2.1.1
+tensorboardx==2.6.2.2
+
+## Others
 cython==3.0.11
 matplotlib==3.9.2
 numpy==1.26.4
@@ -9,25 +14,25 @@ scipy==1.13.1
 pyyaml==6.0.1
 packaging==24.1
 pycocotools==2.0.8
-tensorboardx==2.6.2.2
 h5py==3.11.0
 requests==2.32.3
 tqdm==4.66.5
 seaborn==0.13.2
-xgboost==2.1.1
 
 ensure==1.0.4 
 python-box==7.2.0
 python-dotenv==1.0.1
 
 
-## mlops tools
+## MLOps tools
 dvc[all]==3.56.0
 dagshub==0.3.40
 mlflow==2.17.1
+zenml==0.68.1
 
 ## docs
 mkdocs-material==9.5.42
+kaggle==1.6.17 
 
 ## logs and alerting
 opentelemetry-distro==0.48b0
